--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.46",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "wrangler": "^4.26.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
