--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,5 +3,5 @@
     "compatibility_flags": [
       "nodejs_compat"
     ],
-    "compatibility_date": "2024-09-23",
+    "compatibility_date": "2024-09-23"
   }
